# heic2jpg-converter

./: BUILD_WINDOWS.md  COMMIT_MESSAGE.txt  README.md  generate-icons.py  generate-icons.sh  index.html  package-lock.json  package.json  push-to-github.sh
.github/workflows/: build-all-platforms.yml  build-windows.yml
builds/: README.md
builds/windows/: HEIC2JPG Converter_1.0.0_x64_en-US.msi
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
