[package]
name = "heic2jpg-converter"
version = "1.0.0"
description = "HEIC to JPG Converter - A cross-platform desktop app"
authors = ["11dj <https://github.com/11dj>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/11dj/heic2jpg-converter"
homepage = "https://github.com/11dj/heic2jpg-converter"

[lib]
name = "heic2jpg_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
# Using libheif-rs with bundled libheif for cross-platform support
libheif-rs = { version = "0.18", default-features = false, features = ["use-bindgen"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# File handling
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Logging
log = "0.4"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
# Additional Windows-specific deps if needed
